src/rabbit/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: rabbitmq
# spec:
#   type: ClusterIP
#   selector:
#     app: rabbitmq
#   ports:
#     - name: http
#       protocol: TCP
#       port: 15672
#       targetPort: 15672
#     - name: amqp
#       protocol: TCP
#       port: 5672
#       targetPort: 5672



#nodePort for portforwarding from WSL to Windows.
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
    - name: http
      protocol: TCP
      port: 15672
      targetPort: 15672
      nodePort: 30072  # You can choose any port between 30000–32767
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
      nodePort: 30672  # Optional: expose AMQP externally too
